BREAKING CHANGE (refactor): Move servers into separate files so it's easier to manage stuff.

--- a/config_example.toml
+++ b/config_example.toml
@@ -1,16 +1,22 @@
 [server]
-bind = "" # Use * for all interfaces. UDP and LLMNR broadcast servers will always listen on all interfaces however.
-hdhr_webgui_port = 8080
-# Users who use the official HDHomerun apps will want all of these enabled.
-# If you just want something for your Plex server, you just want the WebGUI and HTTPStream servers enabled.
-enable_hdhr_webgui = true # Web interface for managing this instance
-enable_hdhr_httpstream = true # HTTP Stream interface (:5004/auto/v14.1)
+bind = "10.0.0.2" # Change me!
+
+# DVBLink emulation
+enable_dvbl_control = false
+
+# HDHomeRun emulation
+## If you just want something for your Plex server, you just want the WebGUI and HTTPStream servers enabled.
+## Users who use the official HDHomerun apps will want all of these enabled.
 enable_hdhr_broadcast = true # UDP broadcast client for detecting devices
 enable_hdhr_control = true # TCP control port for managing things like channels
+enable_hdhr_httpstream = true # HTTP Stream interface (:5004/auto/v14.1)
+enable_hdhr_webgui = true # Web interface for managing this instance
+hdhr_webgui_port = 8080
 
 [hdhomerun]
 # hwmodel + model: https://www.silicondust.com/support/linux/
+device_id = "107C21C8" # Still needs reverse engineering.
+firmware = "20220203" # https://www.silicondust.com/support/downloads/firmware-changelog/
 hwmodel = "HDHR5-4US"
 model = "hdhomerun5_atsc"
-firmware = "20220203" # https://www.silicondust.com/support/downloads/firmware-changelog/
-device_id = "107C21C8" # Still needs reverse engineering.
+tuners = 4
